--- a/main_teams/programming.html
+++ b/main_teams/programming.html
@@ -1,6 +1,11 @@
 <link rel="stylesheet" href="book.css">
 <article class="comic">
-<div onclick="loadContent('members/christian.html','content-main')"class="panel">
+<div onclick="loadContent('members/gab.html','content-main')"class="panel">
+    <p class="text top-left">Gabriel</p>
+    <p class="text bottom-right">Ramos Rodriguez</p>
+    <img src="comics/bat-hombre.png" alt="">
+</div>
+  <div onclick="loadContent('members/christian.html','content-main')"class="panel">
     <p class="text bottom-right">Christian Siracusa</p>
     <img src="comics/robin.png" alt="">
 </div>
