--- a/settings.html
+++ b/settings.html
@@ -8,11 +8,12 @@
     </style>
 </head>
 <body>
-    <h1>SETTINGS</h1>
-    </p>
-    <div style="justify-content: center" class="grid_container">
-    <button class="settings_button glitch" onclick="toggleScanlines()">Toggle Scanlines</button>
-    <button class="settings_button glitch" onclick="toggleFullscreen()">Toggle Fullscreen</button>
+    <h1 data-i18n="settings">SETTINGS</h1>
+    <div class="grid_container" style="justify-items:center">
+    
+    
+    <button class="settings_button glitch" onclick="toggleFullscreen()"data-text="Toggle Fullscreen" data-i18n="toggle_full">Toggle Fullscreen</button>
+    <button class="settings_button glitch" onclick="toggleScanlines()" data-text="Toggle Scanline Effect" data-i18n="toggle_scan">Toggle Scanline Effect</button>
     </div>
 </body>
 
