--- a/sidebars/kiosk_team.html
+++ b/sidebars/kiosk_team.html
@@ -1,133 +1,52 @@
 <div class="menu-header">
     <h2>Kiosk division</h2>
     <!-- Language switch button -->
-    <button style="width:80vw" class="lang-btn" title="Back" data-i18n="back_button" onclick="loadContent('team_intro.html','content-main'); loadContent('sidebars/home_sidebar.html','sidebar')"></button>     
+    <button style="width:8vw" class="lang-btn" title="Back" data-i18n="back_button" onclick="loadContent('team_intro.html','content-main'); loadContent('sidebars/home_sidebar.html','sidebar')"></button>     
     <button onclick="switchLanguage()"id="lang-switch" class="lang-btn" title="Switch Language" data-i18n="switch_lang"></button>          
 </div>
 
-<button class="avatar wrapper" onclick="loadContent('members/julian.html','content-main')">
-    <img src="avatars/riddler.png" alt="Avatar">
-    <span class="glitch" data-text="Julian McMahon">Julian McMahon</span>
-</button>
+<button onclick="loadContent('members/julian.html','content-main')" class="glitch" data-text="Julian McMahon">Julian McMahon</button>
 
-<button class="avatar wrapper" onclick="loadContent('members/bella.html','content-main')">
-    <img src="avatars/batgirl.png" alt="Avatar">
-    <span class="glitch" data-text="Bella Gregory">Bella Gregory</span>
-</button>
+<button class="avatar wrapper" onclick="loadContent('members/bella.html','content-main')" class="glitch" data-text="Bella Gregory">Bella Gregory</button>
 
-<button class="avatar wrapper" onclick="loadContent('members/box.html','content-main')">
-    <img src="avatars/bane.png" alt="Avatar">
-    <span class="glitch" data-text="Boxiong Liu">Boxiong Liu</span>
-</button>
+<button class="glitch" data-text="Boxiong Liu" onclick="loadContent('members/box.html','content-main')">Boxiong Liu</button>
 
-<button class="avatar wrapper" onclick="loadContent('members/zoe.html','content-main')">
-    <img src="avatars/harleyquinn.png" alt="Avatar">
-    <span class="glitch" data-text="Zoe Chandler">Zoe Chandler</span>
-</button>
+<button class="glitch" data-text="Melissa Falbo" onclick="loadContent('members/melissa.html','content-main')">Melissa Falbo</button>
 
+<button class="glitch" data-text="Zoe Chandler" onclick="loadContent('members/zoe.html','content-main')">Zoe Chandler</button>
 
-<button class="avatar wrapper" onclick="loadContent('members/melissa.html','content-main')">
-    <img src="avatars/talia.png" alt="Avatar">
-    <span class="glitch" data-text="Melissa Falbo">Melissa Falbo</span>
-</button>
+<button class="glitch" data-text="Mia Tutty" onclick="loadContent('members/mia.html','content-main')">Mia Tutty</button>
 
-<button class="avatar wrapper" onclick="loadContent('members/mia.html','content-main')">
-    <img src="avatars/poisonivy.png" alt="Avatar">
-    <span class="glitch" data-text="Mia Tutty">Mia <br>Tutty</span>
-</button>
+<button class="glitch" data-text="Brody Lemcovitch" onclick="loadContent('members/brody.html','content-main')">Brody Lemcovitch</button>
 
+<button class="glitch" data-text="Marcus De Rosa" onclick="loadContent('members/marcus.html','content-main')">Marcus De Rosa</button>
 
+<button class="glitch" data-text="Mackenzie O'Brien" onclick="loadContent('members/mack.html','content-main')">Mackenzie O'Brien</button>
 
-<button class="avatar wrapper" onclick="loadContent('members/brody.html','content-main')">
-    <img src="avatars/killer_croc.png" alt="Avatar">
-    <span class="glitch" data-text="Brody Lemcovitch">Brody Lemcovitch</span>
-</button>
+<button onclick="loadContent('members/andy.html','content-main')"class="glitch" data-text="Andy Yand">Andy Yang</button>
 
-<button class="avatar wrapper" onclick="loadContent('members/marcus.html','content-main')">
-    <img src="avatars/scarecrow.png" alt="Avatar">
-    <span class="glitch" data-text="Marcus De Rosa">Marcus De Rosa</span>
-</button>
+<button onclick="loadContent('members/arthur.html','content-main')" class="glitch" data-text="Arthur Wang">Arthur Wang</button>
 
-<button class="avatar wrapper" onclick="loadContent('members/mack.html','content-main')">
-    <img src="avatars/mrfreeze.png" alt="Avatar">
-    <span class="glitch" data-text="Mackenzie O'Brien">Mackenzie O'Brien</span>
-</button>
+<button onclick="loadContent('members/cynthia.html','content-main')"class="glitch" data-text="Cynthia Han">Cynthia Han</button>
 
+<button onclick="loadContent('members/daniel.html','content-main')"class="glitch" data-text="Daniel Enwerem">Daniel Enwerem</button>
 
-<button class="avatar wrapper" onclick="loadContent('members/andy.html','content-main')">
-    <img src="avatars/batman.png" alt="">
-    <span class="glitch" data-text="Andy Yand">Andy Yang</span>
-</button>
+<button onclick="loadContent('members/dany.html','content-main')" class="glitch" data-text="Dany Azar">Dany Azar</button>
 
-<button class="avatar wrapper" onclick="loadContent('members/arthur.html','content-main')">
-    <img src="avatars/batman.png" alt="Avatar">
-    <span class="glitch" data-text="Arthur Wang">Arthur Wang</span>
-</button>
+<button onclick="loadContent('members/david.html','content-main')"class="glitch" data-text="David Zien Liang">David Zien Liang</button>
 
+<button class="glitch" data-text="Jonah Gurevitch" onclick="loadContent('members/jonah.html','content-main')">Jonah Gurevitch</button>
 
+<button class="glitch" data-text="Lucas Rusu" onclick="loadContent('members/lucas.html','content-main')">Lucas Rusu</button>
 
+<button  onclick="loadContent('members/naman.html','content-main')"class="glitch" data-text="Naman Chandok">Naman Chandok</button>
 
+<button onclick="loadContent('members/raphael.html','content-main')" class="glitch" data-text="Raphaël Aoun">Raphaël Aoun</button>
 
+<button onclick="loadContent('members/william.html','content-main')"class="glitch" data-text="William Shane">William Shane</button>
 
+<button class="glitch" data-text="Zachary De Luca" onclick="loadContent('members/zachdeluc.html','content-main')">Zachary De Luca</button>
 
+<button class="glitch" data-text="Zachary Vamvadakis" onclick="loadContent('members/zachvam.html','content-main')">Zachary Vamvadakis</button>
 
-<button class="avatar wrapper" onclick="loadContent('members/cynthia.html','content-main')">
-    <img src="avatars/batman.png" alt="Avatar">
-    <span class="glitch" data-text="Cynthia Han">Cynthia Han</span>
-</button>
-
-<button class="avatar wrapper" onclick="loadContent('members/daniel.html','content-main')">
-    <img src="avatars/batman.png" alt="Avatar">
-    <span class="glitch" data-text="Daniel Enwerem">Daniel Enwerem</span>
-</button>
-
-<button class="avatar wrapper" onclick="loadContent('members/dany.html','content-main')">
-    <img src="avatars/batman.png" alt="Avatar">
-    <span class="glitch" data-text="Dany Azar">Dany Azar</span>
-</button>
-
-<button class="avatar wrapper" onclick="loadContent('members/david.html','content-main')">
-    <img src="avatars/batman.png" alt="Avatar">
-    <span class="glitch" data-text="David Zien Liang">David Zien Liang</span>
-</button>
-
-<button class="avatar wrapper" onclick="loadContent('members/jonah.html','content-main')">
-    <img src="avatars/batman.png" alt="Avatar">
-    <span class="glitch" data-text="Jonah Gurevitch">Jonah Gurevitch</span>
-</button>
-
-
-
-<button class="avatar wrapper" onclick="loadContent('members/lucas.html','content-main')">
-    <img src="avatars/killermoth.png" alt="Avatar">
-    <span class="glitch" data-text="Lucas Rusu">Lucas Rusu</span>
-</button>
-
-
-
-
-<button class="avatar wrapper" onclick="loadContent('members/naman.html','content-main')">
-    <img src="avatars/batman.png" alt="Avatar">
-    <span class="glitch" data-text="Naman Chandok">Naman Chandok</span>
-</button>
-
-<button class="avatar wrapper" onclick="loadContent('members/raphael.html','content-main')">
-    <img src="avatars/batman.png" alt="Avatar">
-    <span class="glitch" data-text="Raphaël Aoun">Raphaël Aoun</span>
-</button>
-
-<button class="avatar wrapper" onclick="loadContent('members/william.html','content-main')">
-    <img src="avatars/batman.png" alt="Avatar">
-    <span class="glitch" data-text="William Shane">William Shane</span>
-</button>
-
-<button class="avatar wrapper" onclick="loadContent('members/zachdeluc.html','content-main')">
-    <img src="avatars/penguin.png" alt="Avatar">
-    <span class="glitch" data-text="Zachary De Luca">Zachary De Luca</span>
-</button>
-
-<button class="avatar wrapper" onclick="loadContent('members/zachvam.html','content-main')">
-    <img src="avatars/harveybull.png" alt="Avatar">
-    <span class="glitch" data-text="Zachary Vamvadakis">Zachary Vamvadakis</span>
-</button>
 
