--- a/sidebars/robot_team.html
+++ b/sidebars/robot_team.html
@@ -1,37 +1,20 @@
 <nav class="menu-header">
     <h2>Robot division</h2>
     <!-- Language switch button -->
-    <button style="width:80vw" class="lang-btn" title="Back" data-i18n="back_button" onclick="loadContent('team_intro.html','content-main'); loadContent('sidebars/home_sidebar.html','sidebar')"></button>     
+    <button style="width:8vw" class="lang-btn" title="Back" data-i18n="back_button" onclick="loadContent('team_intro.html','content-main'); loadContent('sidebars/home_sidebar.html','sidebar')"></button>     
     <button onclick="switchLanguage()"id="lang-switch" class="lang-btn" title="Switch Language" data-i18n="switch_lang"></button>            
 </nav>
 
-<button class="avatar wrapper" onclick="loadContent('members/adih.html','content-main')"> 
-    <img src="avatars/jacknapier.png" alt="">
-    <span class="glitch" data-text="Adih Verma">Adih <br>Verma</span>
-</button>
+<button onclick="loadContent('members/adih.html','content-main')" class="glitch" data-text="Adih Verma">Adih Verma</span>
 
-<button class="avatar wrapper" onclick="loadContent('robot_team.html','content-main')">
-    <img src="avatars/jimgordon.png" alt="">
-    <span class="glitch" data-text="Zachary Stewart">Zachary Stewart</span>
-</button>
+<button onclick="loadContent('robot_team.html','content-main')" class="glitch" data-text="Zachary Stewart">Zachary Stewart</button>
 
-<button class="avatar wrapper" onclick="loadContent('members/charlie.html','content-main')">
-    <img src="avatars/batman.png" alt="Avatr">
-    <span class="glitch" data-text="Charlie Konigsberg">Charlie Konigsberg</span>
-</button>
+<button onclick="loadContent('members/charlie.html','content-main') " class="glitch" data-text="Charlie Konigsberg">Charlie Konigsberg</button>
 
-<button class="avatar wrapper" onclick="loadContent('members/chase.html','content-main')">
-    <img src="avatars/two-face.png" alt="Avatar">
-    <span class="glitch" data-text="Chase Engel">Chase Engel</span>
-</button>
+<button class="glitch" data-text="Chase Engel" onclick="loadContent('members/chase.html','content-main')">Chase Engel</button>
 
-<button class="avatar wrapper" onclick="loadContent('members/lucas.html','content-main')">
-    <img src="avatars/killermoth.png" alt="Avatar">
-    <span class="glitch" data-text="Lucas Rusu">Lucas Rusu</span>
-</button>
+<button class="glitch" data-text="Lucas Rusu" onclick="loadContent('members/lucas.html','content-main')">Lucas Rusu</button>
 
-<button class="avatar wrapper" onclick="loadContent('members/marcus.html','content-main')">
-    <img src="avatars/scarecrow.png" alt="Avatar">
-    <span class="glitch" data-text="Marcus De Rosa">Marcus De Rosa</span>
-</button>
+<button class="glitch" data-text="Marcus De Rosa" onclick="loadContent('members/marcus.html','content-main')">Marcus De Rosa</button>
+
 
