--- a/conception.html
+++ b/conception.html
@@ -35,7 +35,7 @@
             background: #1A1A1A;
             padding: 15px;
             margin: 10px 0;
-            border-left: 5px solid #FFD700;
+            border-left: 5px solid #00f2ff;
         }
 
         footer {
