--- a/members/gab.html
+++ b/members/gab.html
@@ -1,15 +1,16 @@
 <div class="member">
   <div class="member-container">
-    <img src="memberphoto/box.png" alt="Member Photo">
+    <img src="memberphoto/gab.png" alt="Member Photo">
     <div class="titles">
-      <h1>Boxiong Liu</h1>
-      <h1 data-i18n="kiosk"></h1>
+      <h1>Gabriel Ramos Rodriguez</h1>
+      <h1 data-i18n="coding"></h1>
     </div>
+
   </div>
   <div class="description-container">
     <h2 data-i18n="task"></h2>
-    <p data-i18n="box_desc"></p>
+    <p data-i18n="gab_desc"></p>
     <h2 data-i18n="fun_fact">Fun Fact:</h2>
-    <p data-i18n="box_fact">N/A</p>
+    <p data-i18n="gab_fact"></p>
   </div>
 </div>
