--- a/main_teams/entire.html
+++ b/main_teams/entire.html
@@ -40,6 +40,11 @@
     <img src="comics/bane.png" alt="">
 </div>
 
+<div onclick="loadContent('members/gab.html','content-main')"class="panel">
+    <p class="text top-left">Gabriel</p>
+    <p class="text bottom-right">Ramos Rodriguez</p>
+    <img src="comics/bat-hombre.png" alt="">
+</div>
 
 <div onclick="loadContent('members/chase.html','content-main')"class="panel">
     <p class="text top-left">Chase Engel</p>
