--- a/main_teams/website.html
+++ b/main_teams/website.html
@@ -1,4 +1,9 @@
 <link rel="stylesheet" href="book.css">
 <article class="comic">
 
+<div onclick="loadContent('members/gab.html','content-main')"class="panel">
+    <p class="text top-left">Gabriel</p>
+    <p class="text bottom-right">Ramos Rodriguez</p>
+    <img src="comics/bat-hombre.png" alt="">
+</div>
 </article>
