--- a/home.html
+++ b/home.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="scanlines.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com">
     <link rel="stylesheet" href="glitch.css">
+    <link rel='stylesheet'href='https://fonts.googleapis.com/css?family=Lato'>
+    <link href='https://fonts.googleapis.com/css?family=Aboreto' rel='stylesheet'>
     <style>
       body.fade-start {
         opacity: 0;
