--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
       const gate = document.getElementById('intrusion-overlay');
       const msgNode = document.getElementById('intrusion-text');
       const fadeLayer = document.getElementById('fade-overlay');
-      const msg = 'Warning: Intrusion detected.';
+      const msg = 'Secret Authentication Complete';
       const typeSpeedMs = 60;
       const minTypeMs = 1200;
       const fadeDelayMs = 650;
