--- a/sidebars/entire.html
+++ b/sidebars/entire.html
@@ -1,8 +1,8 @@
 <nav class="menu-header">
-    <h2>The Entire Team</h2>
+    <h2>Entire Team</h2>
     <!-- Language switch button -->
     <button class="lang-btn" style="width:8vw" title="Back" data-i18n="back_button" onclick="loadContent('team_intro.html','content-main'); loadContent('sidebars/home_sidebar.html','sidebar')"></button>                 
-    <button onclick="switchLanguage()"id="lang-switch" class="lang-btn" title="Switch Language" data-i18n="switch_lang"></button>
+    <button style="width:auto" onclick="switchLanguage()"id="lang-switch" class="lang-btn" title="Switch Language" data-i18n="switch_lang"></button>
     
 </nav>
 
