--- a/sidebars/home_sidebar.html
+++ b/sidebars/home_sidebar.html
@@ -1,8 +1,8 @@
-<div class="menu-header">
+<span class="menu-header">
                 <h2>Menu</h2>
                 <!-- Language switch button -->
-                <button onclick="switchLanguage()"id="lang-switch" class="lang-btn" title="Switch Language" data-i18n="switch_lang"></button>
-</div>
+                <button style="width:auto" onclick="switchLanguage()"id="lang-switch" class="lang-btn" title="Switch Language" data-i18n="switch_lang"></button>
+</span>
 
 
 <button onclick="loadContent('opening.html','content-main')" data-i18n="home_page"class="glitch" data-text="Home"></button>
@@ -13,4 +13,3 @@
 <button onclick="loadContent('credits.html','content-main')" data-i18n="credits" class="glitch" data-text="Credits"></button>
 <button onclick="loadContent('rules.html','content-main')" data-i18n="rules" class="glitch" data-text="Rules"></button>
 <button onclick="loadContent('settings.html','content-main')" data-i18n="settings" class="glitch" data-text="Settings"></button>
-
