--- a/sidebars/kiosk_team.html
+++ b/sidebars/kiosk_team.html
@@ -1,8 +1,8 @@
 <div class="menu-header">
-    <h2>Kiosk division</h2>
+    <h2>Kiosk Team</h2>
     <!-- Language switch button -->
     <button style="width:8vw" class="lang-btn" title="Back" data-i18n="back_button" onclick="loadContent('team_intro.html','content-main'); loadContent('sidebars/home_sidebar.html','sidebar')"></button>     
-    <button onclick="switchLanguage()"id="lang-switch" class="lang-btn" title="Switch Language" data-i18n="switch_lang"></button>          
+    <button style="width:auto" onclick="switchLanguage()"id="lang-switch" class="lang-btn" title="Switch Language" data-i18n="switch_lang"></button>          
 </div>
 
 <button onclick="loadContent('members/julian.html','content-main')" class="glitch" data-text="Julian McMahon">Julian McMahon</button>
