--- a/main_teams/entire.html
+++ b/main_teams/entire.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="book.css">
 <article class="comic">
 <div onclick="loadContent('members/adih.html','content-main')"class="panel">
-    <p class="speech">Adih Verma</p>  
+    <p class="text top-left">Adih Verma</p>  
     <img src="comics/jacknapier.png" alt="">
   </div>
 <div onclick="loadContent('members/zachary.html','content-main')"class="panel">
