--- a/main_teams/robot.html
+++ b/main_teams/robot.html
@@ -2,7 +2,7 @@
 <article class="comic">
   <div onclick="loadContent('members/adih.html','content-main')"class="panel">
     
-    <p class="speech">Adih Verma</p>  
+    <p class="text top-left">Adih Verma</p>  
     <img src="comics/jacknapier.png" alt="">
 
   </div>
