--- a/crc.html
+++ b/crc.html
@@ -4,4 +4,4 @@
 <h2 data-i18n="beyond_competition"></h2>
 <p data-i18n="beyond_competitiontext"></p>
 <p data-i18n="crc_more"></p>
-<a href="https://robo-crc.ca/"><p data-i18n="website"></p></a>
+<a href="https://robo-crc.ca/" target="_blank" rel="noopener noreferrer"><p data-i18n="website"></p></a>
