--- a/sidebars/entire.html
+++ b/sidebars/entire.html
@@ -8,7 +8,7 @@
 
 <button onclick="loadContent('members/adih.html','content-main')" class="glitch" data-text="Adih Verma">Adih Verma</span>
 
-<button onclick="loadContent('robot_team.html','content-main')" class="glitch" data-text="Zachary Stewart">Zachary Stewart</button>
+<button onclick="loadContent('members/zachary.html','content-main')"class="glitch" data-text="Zachary Stewart">Zachary Stewart</button>
 
 <button onclick="loadContent('members/julian.html','content-main')" class="glitch" data-text="Julian McMahon">Julian McMahon</button>
 
@@ -65,3 +65,19 @@
 <button onclick="loadContent('members/dany.html','content-main')" class="glitch" data-text="Dany Azar">Dany Azar</button>
 
 <button onclick="loadContent('members/david.html','content-main')"class="glitch" data-text="David Zien Liang">David Zien Liang</button>
+
+
+
+
+<button onclick="loadContent('members/alana.html','content-main')"class="glitch" data-text="Alana Mangione">Alana Mangione</button>
+
+<button onclick="loadContent('members/kamryn.html','content-main')"class="glitch" data-text="Kamryn Hum">Kamryn Hum</button>
+
+<button onclick="loadContent('members/sofia.html','content-main')"class="glitch" data-text="Sofia Mazareanu">Sofia Mazareanu</button>
+
+<button onclick="loadContent('members/charlie.html','content-main')"class="glitch" data-text="Charlie Mo">Charlie Mo</button>
+
+<button onclick="loadContent('members/eunice.html','content-main')"class="glitch" data-text="Eunice Liang">Eunice Liang</button>
+
+<button onclick="loadContent('members/tommi.html','content-main')"class="glitch" data-text="Tommi Sabra">Tommi Sabra</button>
+
