--- a/sidebars/kiosk_team.html
+++ b/sidebars/kiosk_team.html
@@ -19,7 +19,13 @@
 
 <button class="glitch" data-text="Brody Lemcovitch" onclick="loadContent('members/brody.html','content-main')">Brody Lemcovitch</button>
 
+<button onclick="loadContent('members/eunice.html','content-main')"class="glitch" data-text="Eunice Liang">Eunice Liang</button>
+
 <button class="glitch" data-text="Marcus De Rosa" onclick="loadContent('members/marcus.html','content-main')">Marcus De Rosa</button>
+
+<button onclick="loadContent('members/kamryn.html','content-main')"class="glitch" data-text="Kamryn Hum">Kamryn Hum</button>
+
+<button onclick="loadContent('members/adih.html','content-main')" class="glitch" data-text="Adih Verma">Adih Verma</span>
 
 <button class="glitch" data-text="Mackenzie O'Brien" onclick="loadContent('members/mack.html','content-main')">Mackenzie O'Brien</button>
 
@@ -48,5 +54,7 @@
 <button class="glitch" data-text="Zachary De Luca" onclick="loadContent('members/zachdeluc.html','content-main')">Zachary De Luca</button>
 
 <button class="glitch" data-text="Zachary Vamvadakis" onclick="loadContent('members/zachvam.html','content-main')">Zachary Vamvadakis</button>
+
+<button onclick="loadContent('members/charlie.html','content-main')"class="glitch" data-text="Charlie Mo">Charlie Mo</button>
 
 
