--- a/sidebars/programming_team.html
+++ b/sidebars/programming_team.html
@@ -7,6 +7,8 @@
 
 <button onclick="loadContent('members/gab.html','content-main')" class="glitch" data-text="Gabriel Ramos Rodriguez">Gabriel Ramos Rodriguez</button>
 
+<button onclick="loadContent('members/tommi.html','content-main')"class="glitch" data-text="Tommi Sabra">Tommi Sabra</button>
+
 <button class="glitch" data-text="Christian Siracusa" onclick="loadContent('members/christian.html','content-main')">Christian Siracusa</button>
 
 <button class="glitch" data-text="George Konstantopoulos" onclick="loadContent('members/george.html','content-main')">George Konstantopoulos</button>
