--- a/sidebars/robot_team.html
+++ b/sidebars/robot_team.html
@@ -7,7 +7,7 @@
 
 <button onclick="loadContent('members/adih.html','content-main')" class="glitch" data-text="Adih Verma">Adih Verma</span>
 
-<button onclick="loadContent('robot_team.html','content-main')" class="glitch" data-text="Zachary Stewart">Zachary Stewart</button>
+<button onclick="loadContent('members/zachary.html','content-main')" class="glitch" data-text="Zachary Stewart">Zachary Stewart</button>
 
 <button onclick="loadContent('members/charlie.html','content-main') " class="glitch" data-text="Charlie Konigsberg">Charlie Konigsberg</button>
 
