--- a/sidebars/video_team.html
+++ b/sidebars/video_team.html
@@ -11,12 +11,17 @@
 
 <button onclick="loadContent('members/charlie.html','content-main') " class="glitch" data-text="Charlie Konigsberg">Charlie Konigsberg</button>
 
+<button class="glitch" data-text="Zoe Chandler" onclick="loadContent('members/zoe.html','content-main')">Zoe Chandler</button>
+
+<button onclick="loadContent('members/alana.html','content-main')"class="glitch" data-text="Alana Mangione">Alana Mangione</button>
+
+<button onclick="loadContent('members/eunice.html','content-main')"class="glitch" data-text="Eunice Liang">Eunice Liang</button>
+
 <button class="glitch" data-text="Jonah Gurevitch" onclick="loadContent('members/jonah.html','content-main')">Jonah Gurevitch</button>
 
 <button class="glitch" data-text="Mia Tutty" onclick="loadContent('members/mia.html','content-main')">Mia Tutty</button>
 
-<button class="glitch" data-text="Zoe Chandler" onclick="loadContent('members/zoe.html','content-main')">Zoe Chandler</button>
-
 <button class="glitch" data-text="Brody Lemcovitch" onclick="loadContent('members/brody.html','content-main')">Brody Lemcovitch</button>
 
+<button onclick="loadContent('members/sofia.html','content-main')"class="glitch" data-text="Sofia Mazareanu">Sofia Mazareanu</button>
 
