--- a/sidebars/website_team.html
+++ b/sidebars/website_team.html
@@ -6,3 +6,9 @@
 </nav>
 
 <button onclick="loadContent('members/gab.html','content-main')" class="glitch" data-text="Gabriel Ramos Rodriguez">Gabriel Ramos Rodriguez</button>
+
+<button onclick="loadContent('members/tommi.html','content-main')"class="glitch" data-text="Tommi Sabra">Tommi Sabra</button>
+
+<button onclick="loadContent('members/adih.html','content-main')" class="glitch" data-text="Adih Verma">Adih Verma</span>
+
+<button onclick="loadContent('members/alana.html','content-main')"class="glitch" data-text="Alana Mangione">Alana Mangione</button>
