--- a/members/charliemo.html
+++ b/members/charliemo.html
@@ -1,17 +1,18 @@
 <div class="member">
   <div class="member-container">
-    <img src="memberphoto/adihverma.png" alt="Member Photo">
-  
+    <img src="memberphoto/charliemo.png" alt="Member Photo">
+
     <div class="titles">
-      <h1>Adih Verma</h1>
-      <h1 data-i18n="robot_kiosk_website"></h1>
+      <h1>Charlie Mo</h1>
+      <h1 data-i18n="kiosk"></h1>
     </div>
   </div>
     <div class="description-container">
       <h2 data-i18n="task"></h2>
-      <p data-i18n="adihverma_desc"></p>
+      <p data-i18n="charliemo_desc"></p>
 
       <h2 data-i18n="fun_fact"></h2>
-      <p data-i18n="adihverma_fact"></p>
+      <p data-i18n="charliemo_fact"></p>
     </div>
+  
 </div>
