--- a/crc.html
+++ b/crc.html
@@ -4,4 +4,6 @@
 <h2 data-i18n="beyond_competition"></h2>
 <p data-i18n="beyond_competitiontext"></p>
 <p data-i18n="crc_more"></p>
-<a href="https://robo-crc.ca/" target="_blank" rel="noopener noreferrer"><p data-i18n="website"></p></a>
+<a href="https://robo-crc.ca/" target="_blank" rel="noopener noreferrer" style="display: block; text-align: center;">
+  <img src="crc.png" alt="CRC logo" style="display: inline-block; width: clamp(120px, 20vw, 220px); height: auto;">
+</a>
